tdf#169108 - Create anonymous database range or data

Create anonymous database range or data during the creation of a pivot table. Otherwise, the selection changes to a old autofilter areas and the pivot table cannot be created.

Change-Id: If55b9d1204ab2ce2c3ee9a227bf0dbe1e222dbcb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193096
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit 2a50c7fbb85941a2c50ac01257af36f132b07006)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193137
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>